--- a/react-exercises/package.json
+++ b/react-exercises/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-toastify": "^7.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
