--- a/react-exercises/package.json
+++ b/react-exercises/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-toastify": "^7.0.3",
